@@ -8,22 +8,23 @@ package de.eshg.lib.auditlog;
 import de.eshg.auditlog.AddAuditLogFileRequest;
 import de.eshg.auditlog.AuditLogArchivingApi;
 import de.eshg.auditlog.AuditLogSource;
-import de.eshg.lib.auditlog.config.AuditLogConfig;
+import de.eshg.lib.auditlog.domain.AuditLogEntry;
+import de.eshg.lib.auditlog.domain.AuditLogEntryRepository;
 import de.eshg.lib.rest.oauth.client.commons.ModuleClientAuthenticator;
-import java.io.ByteArrayOutputStream;
-import java.io.IOException;
-import java.nio.file.Files;
-import java.nio.file.Path;
+import de.eshg.rest.service.error.ErrorCode;
+import de.eshg.rest.service.error.ErrorResponse;
+import jakarta.transaction.Transactional;
+import java.nio.charset.StandardCharsets;
 import java.time.Clock;
+import java.time.Instant;
 import java.time.LocalDate;
-import java.time.format.DateTimeFormatter;
-import java.time.format.DateTimeParseException;
-import java.util.Comparator;
+import java.util.LinkedHashMap;
 import java.util.List;
-import java.util.stream.Stream;
+import java.util.Map;
+import java.util.stream.Collectors;
 import org.springframework.scheduling.annotation.Scheduled;
 import org.springframework.stereotype.Component;
-import org.springframework.util.FileSystemUtils;
+import org.springframework.web.client.HttpClientErrorException.BadRequest;
 
 @Component
 public class AuditLogArchiving {
@@ -32,106 +33,101 @@ public class AuditLogArchiving {
       org.slf4j.LoggerFactory.getLogger(AuditLogArchiving.class);
 
   private final AuditLogArchivingApi auditLogArchivingApi;
-  private final AuditLogConfig auditLogConfig;
   private final AuditLogSource auditLogSource;
-  private final Clock clock;
   private final ModuleClientAuthenticator moduleClientAuthenticator;
+  private final AuditLogEntryRepository auditLogEntryRepository;
+  private final Clock clock;
 
   public AuditLogArchiving(
       AuditLogArchivingApi auditLogArchivingApi,
-      AuditLogConfig auditLogConfig,
       AuditLogSource auditLogSource,
-      Clock clock,
-      ModuleClientAuthenticator moduleClientAuthenticator) {
+      ModuleClientAuthenticator moduleClientAuthenticator,
+      AuditLogEntryRepository auditLogEntryRepository,
+      Clock clock) {
     this.auditLogArchivingApi = auditLogArchivingApi;
-    this.auditLogConfig = auditLogConfig;
     this.auditLogSource = auditLogSource;
-    this.clock = clock;
     this.moduleClientAuthenticator = moduleClientAuthenticator;
+    this.auditLogEntryRepository = auditLogEntryRepository;
+    this.clock = clock;
   }
 
   @Scheduled(cron = "${de.eshg.auditlog.archiving.schedule:@daily}")
+  @Transactional
   public void runArchivingJob() {
     moduleClientAuthenticator.doWithModuleClientAuthentication(this::archiveOldAuditlogFiles);
   }
 
   private void archiveOldAuditlogFiles() {
-    log.info("Starting archiving of old audit log files");
+    log.info("Starting archiving of old audit log entries");
 
-    Path logOutputDir = auditLogConfig.getLogOutputDir();
-    log.debug("Using log output directory {}", logOutputDir);
+    Instant todayAtStartOfDay = LocalDate.now(clock).atStartOfDay(clock.getZone()).toInstant();
+    List<AuditLogEntry> toArchive =
+        auditLogEntryRepository.findByCreatedAtBeforeOrderByCreatedAtAscIdAsc(todayAtStartOfDay);
 
-    List<Path> candidates = getCandidates(logOutputDir);
+    log.info("Found {} entries created before {}", toArchive.size(), todayAtStartOfDay);
 
-    if (log.isInfoEnabled()) {
-      List<String> oldAuditLogFilesNames =
-          candidates.stream().map(Path::getFileName).map(Path::toString).toList();
-      log.info(
-          "Found {} audit log directories for archiving {}",
-          candidates.size(),
-          !oldAuditLogFilesNames.isEmpty() ? oldAuditLogFilesNames : "");
+    Map<LocalDate, List<AuditLogEntry>> auditLogEntriesByDate =
+        toArchive.stream()
+            .collect(
+                Collectors.groupingBy(
+                    auditLogEntry ->
+                        LocalDate.ofInstant(auditLogEntry.getCreatedAt(), clock.getZone()),
+                    LinkedHashMap::new,
+                    Collectors.toList()));
+
+    for (LocalDate auditLogDate : auditLogEntriesByDate.keySet()) {
+      try {
+        List<AuditLogEntry> auditLogEntries = auditLogEntriesByDate.get(auditLogDate);
+        log.info("Found {} entries to be archived for {}", auditLogEntries.size(), auditLogDate);
+
+        archiveAuditLog(auditLogDate, auditLogEntries);
+      } catch (Exception e) {
+        log.error("Error while trying to archive audit log for {}.", auditLogDate, e);
+      }
     }
 
-    for (Path candidate : candidates) {
-      archive(candidate);
-    }
-
-    log.info("Finished archiving of old audit log files");
+    log.info("Finished archiving of old audit logs");
   }
 
-  private List<Path> getCandidates(Path logOutputDir) {
-    try (Stream<Path> paths = Files.list(logOutputDir)) {
-      return paths.filter(Files::isDirectory).filter(this::isOldAuditLogDirectory).toList();
-    } catch (IOException e) {
-      throw new AuditLoggerException("Exception occured while reading auditlog root directory.", e);
-    }
-  }
+  private void archiveAuditLog(LocalDate auditLogDate, List<AuditLogEntry> auditLogEntries) {
+    String content =
+        auditLogEntries.stream().map(AuditLogFormatter::format).collect(Collectors.joining("\n"));
 
-  private boolean isOldAuditLogDirectory(Path path) {
+    AuditLogFile auditLogFile =
+        new AuditLogFile(auditLogDate.toString(), content.getBytes(StandardCharsets.UTF_8));
+
     try {
-      LocalDate localDate =
-          LocalDate.parse(path.getFileName().toString(), DateTimeFormatter.ISO_LOCAL_DATE);
-      return localDate.isBefore(LocalDate.now(clock));
-    } catch (DateTimeParseException e) {
-      log.error("Failed to parse date from audit log directory name %s".formatted(path), e);
+      auditLogArchivingApi.addAuditlogFile(
+          new AddAuditLogFileRequest(auditLogDate, auditLogSource), auditLogFile);
+      log.info("Archived audit logs for {}", auditLogDate);
+
+      deleteAuditLog(auditLogDate, auditLogEntries);
+    } catch (BadRequest exception) {
+      if (isAlreadyExistsError(exception)) {
+        log.error(
+            "Audit log for {} already exists. Performing cleanup...", auditLogDate, exception);
+        deleteAuditLog(auditLogDate, auditLogEntries);
+      } else {
+        throw exception;
+      }
+    }
+  }
+
+  private boolean isAlreadyExistsError(BadRequest exception) {
+    try {
+      ErrorResponse errorResponse = exception.getResponseBodyAs(ErrorResponse.class);
+      if (errorResponse != null) {
+        return ErrorCode.ALREADY_EXISTS.equals(errorResponse.errorCode());
+      }
+    } catch (Exception e) {
       return false;
     }
+
+    return false;
   }
 
-  private void archive(Path auditLogDirectory) {
-    try {
-      final LocalDate auditLogDate =
-          LocalDate.parse(
-              auditLogDirectory.getFileName().toString(), DateTimeFormatter.ISO_LOCAL_DATE);
-      auditLogArchivingApi.addAuditlogFile(
-          new AddAuditLogFileRequest(auditLogDate, auditLogSource), mergeFiles(auditLogDirectory));
-      log.info("Archived audit log directory for {}", auditLogDate);
-
-      FileSystemUtils.deleteRecursively(auditLogDirectory);
-      log.info("Deleted local audit log directory for {}", auditLogDate);
-    } catch (Exception e) {
-      log.error(
-          "Error while trying to archive audit log directory {}. Resuming...",
-          auditLogDirectory,
-          e);
-    }
-  }
-
-  private static AuditLogFile mergeFiles(Path directory) throws IOException {
-    try (Stream<Path> originalFiles = Files.list(directory);
-        ByteArrayOutputStream mergedFileStream = new ByteArrayOutputStream()) {
-
-      for (Path originalFile : sortedByFilename(originalFiles)) {
-        Files.copy(originalFile, mergedFileStream);
-      }
-      return new AuditLogFile(directory.getFileName().toString(), mergedFileStream.toByteArray());
-    }
-  }
-
-  private static List<Path> sortedByFilename(Stream<Path> files) {
-    return files
-        .filter(Files::isRegularFile)
-        .sorted(Comparator.comparing(p -> p.getFileName().toString()))
-        .toList();
+  private void deleteAuditLog(LocalDate auditLogDate, List<AuditLogEntry> auditLogEntries) {
+    auditLogEntryRepository.deleteAll(auditLogEntries);
+    log.info("Deleted {} local audit entries for {}", auditLogEntries.size(), auditLogDate);
   }
 }
